...
    <string name="current_funds">Current Funds</string>

    <string name="send">Send</string>
    <string name="developer_mode">Developer Mode</string>

    <!-- Menu -->
    <string name="menu_item_1">My Chain</string>
    <string name="menu_item_2">Clear Entire Inbox</string>
    <string name="menu_info">Info</string>
    <string name="find_peer">Find peer</string>

    <!--- app to app strings -->
    <string name="start_connection">Attempt connection</string>
...
