...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/incoming_peer_connection_list_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />


            <ListView
...
